Update module overviews to include attributes for dataclasses.

--- a/nbs/01_parsers.ipynb
+++ b/nbs/01_parsers.ipynb
@@ -95,6 +95,7 @@
     "    docstring: Optional[str] = None               # Class docstring\n",
     "    methods: List[FunctionInfo] = field(default_factory=list)  # Class methods\n",
     "    decorators: List[str] = field(default_factory=list)        # Class decorators\n",
+    "    attributes: List[VariableInfo] = field(default_factory=list)  # Class attributes (for dataclasses)\n",
     "    is_exported: bool = False                     # Has #| export\n",
     "    source_line: Optional[int] = None             # Line number in source"
    ]
@@ -270,6 +271,51 @@
     "            method_info = parse_function(item, source_lines, is_exported)\n",
     "            methods.append(method_info)\n",
     "    \n",
+    "    # Extract dataclass attributes if this is a dataclass\n",
+    "    attributes = []\n",
+    "    is_dataclass = 'dataclass' in decorators\n",
+    "    \n",
+    "    if is_dataclass:\n",
+    "        for item in node.body:\n",
+    "            if isinstance(item, ast.AnnAssign) and isinstance(item.target, ast.Name):\n",
+    "                # This is a type-annotated attribute\n",
+    "                attr_name = item.target.id\n",
+    "                type_hint = ast.unparse(item.annotation) if hasattr(ast, 'unparse') else str(item.annotation)\n",
+    "                \n",
+    "                # Get the default value if present\n",
+    "                default_value = None\n",
+    "                if item.value:\n",
+    "                    try:\n",
+    "                        if isinstance(item.value, ast.Constant):\n",
+    "                            default_value = repr(item.value.value)\n",
+    "                        elif isinstance(item.value, ast.Call):\n",
+    "                            # Handle field() calls\n",
+    "                            if isinstance(item.value.func, ast.Name) and item.value.func.id == 'field':\n",
+    "                                default_value = \"field(...)\"\n",
+    "                            else:\n",
+    "                                default_value = ast.unparse(item.value) if hasattr(ast, 'unparse') else \"...\"\n",
+    "                        else:\n",
+    "                            default_value = ast.unparse(item.value) if hasattr(ast, 'unparse') else \"...\"\n",
+    "                    except:\n",
+    "                        default_value = \"...\"\n",
+    "                \n",
+    "                # Get inline comment\n",
+    "                comment = None\n",
+    "                if item.lineno <= len(source_lines):\n",
+    "                    line = source_lines[item.lineno - 1]\n",
+    "                    comment_match = re.search(r'#\\s*(.+)$', line)\n",
+    "                    if comment_match:\n",
+    "                        comment = comment_match.group(1).strip()\n",
+    "                \n",
+    "                attr_info = VariableInfo(\n",
+    "                    name=attr_name,\n",
+    "                    type_hint=type_hint,\n",
+    "                    value=default_value,\n",
+    "                    comment=comment,\n",
+    "                    is_exported=is_exported\n",
+    "                )\n",
+    "                attributes.append(attr_info)\n",
+    "    \n",
     "    # Extract class signature (including __init__ if present)\n",
     "    class_sig = f\"class {node.name}\"\n",
     "    if node.bases:\n",
@@ -294,6 +340,7 @@
     "        docstring=docstring,\n",
     "        methods=methods,\n",
     "        decorators=decorators,\n",
+    "        attributes=attributes,\n",
     "        is_exported=is_exported,\n",
     "        source_line=node.lineno\n",
     "    )"
