--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -138,6 +138,19 @@
     "                lines.append(f'    {doc_line}')\n",
     "            lines.append('    \"\"\"')\n",
     "    \n",
+    "    # Add dataclass attributes if this is a dataclass\n",
+    "    if 'dataclass' in cls.decorators and cls.attributes:\n",
+    "        lines.append(\"    \")\n",
+    "        for attr in cls.attributes:\n",
+    "            attr_line = f\"    {attr.name}\"\n",
+    "            if attr.type_hint:\n",
+    "                attr_line += f\": {attr.type_hint}\"\n",
+    "            if attr.value and attr.value != \"None\":\n",
+    "                attr_line += f\" = {attr.value}\"\n",
+    "            if attr.comment:\n",
+    "                attr_line += f\"  # {attr.comment}\"\n",
+    "            lines.append(attr_line)\n",
+    "    \n",
     "    # Add selected methods\n",
     "    if cls.methods:\n",
     "        lines.append(\"    \")\n",
@@ -989,6 +1002,12 @@
       "class NotebookInfo:\n",
       "    \"Information about a single notebook\"\n",
       "    \n",
+      "    path: Path  # Path to the notebook file\n",
+      "    name: str  # Notebook filename without extension\n",
+      "    title: Optional[str]  # H1 title from first cell\n",
+      "    description: Optional[str]  # Blockquote description from first cell\n",
+      "    export_module: Optional[str]  # Module name from default_exp\n",
+      "    \n",
       "    def relative_path(self) -> Path:       # Path relative to nbs directory\n",
       "        \"Get path relative to nbs directory\"\n",
       "```\n",
@@ -997,6 +1016,13 @@
       "@dataclass\n",
       "class DirectoryInfo:\n",
       "    \"Information about a directory in the nbs folder\"\n",
+      "    \n",
+      "    path: Path  # Path to the directory\n",
+      "    name: str  # Directory name\n",
+      "    notebook_count: int = 0  # Number of notebooks in directory\n",
+      "    description: Optional[str]  # Description from folder's main notebook\n",
+      "    subdirs: List[DirectoryInfo] = field(...)  # Subdirectories\n",
+      "    notebooks: List[NotebookInfo] = field(...)  # Notebooks in this directory\n",
       "    \n",
       "    def total_notebook_count(self) -> int:          # Total notebooks including subdirs\n",
       "        \"Get total notebook count including subdirectories\"\n",
