--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -189,6 +189,12 @@
     "class NotebookInfo:\n",
     "    \"Information about a single notebook\"\n",
     "    \n",
+    "    path: Path  # Path to the notebook file\n",
+    "    name: str  # Notebook filename without extension\n",
+    "    title: Optional[str]  # H1 title from first cell\n",
+    "    description: Optional[str]  # Blockquote description from first cell\n",
+    "    export_module: Optional[str]  # Module name from default_exp\n",
+    "    \n",
     "    def relative_path(self) -> Path:       # Path relative to nbs directory\n",
     "        \"Get path relative to nbs directory\"\n",
     "```\n",
@@ -197,6 +203,13 @@
     "@dataclass\n",
     "class DirectoryInfo:\n",
     "    \"Information about a directory in the nbs folder\"\n",
+    "    \n",
+    "    path: Path  # Path to the directory\n",
+    "    name: str  # Directory name\n",
+    "    notebook_count: int = 0  # Number of notebooks in directory\n",
+    "    description: Optional[str]  # Description from folder's main notebook\n",
+    "    subdirs: List[DirectoryInfo] = field(...)  # Subdirectories\n",
+    "    notebooks: List[NotebookInfo] = field(...)  # Notebooks in this directory\n",
     "    \n",
     "    def total_notebook_count(self) -> int:          # Total notebooks including subdirs\n",
     "        \"Get total notebook count including subdirectories\"\n",
@@ -285,24 +298,55 @@
     "@dataclass\n",
     "class FunctionInfo:\n",
     "    \"Information about a function\"\n",
+    "    \n",
+    "    name: str  # Function name\n",
+    "    signature: str  # Full signature with docments\n",
+    "    docstring: Optional[str]  # Function docstring\n",
+    "    decorators: List[str] = field(...)  # List of decorators\n",
+    "    is_exported: bool = False  # Has #| export\n",
+    "    source_line: Optional[int]  # Line number in source\n",
     "```\n",
     "\n",
     "```python\n",
     "@dataclass\n",
     "class ClassInfo:\n",
     "    \"Information about a class\"\n",
+    "    \n",
+    "    name: str  # Class name\n",
+    "    signature: str  # Class signature with __init__\n",
+    "    docstring: Optional[str]  # Class docstring\n",
+    "    methods: List[FunctionInfo] = field(...)  # Class methods\n",
+    "    decorators: List[str] = field(...)  # Class decorators\n",
+    "    attributes: List[VariableInfo] = field(...)  # Class attributes (for dataclasses)\n",
+    "    is_exported: bool = False  # Has #| export\n",
+    "    source_line: Optional[int]  # Line number in source\n",
     "```\n",
     "\n",
     "```python\n",
     "@dataclass\n",
     "class VariableInfo:\n",
     "    \"Information about a module-level variable\"\n",
+    "    \n",
+    "    name: str  # Variable name\n",
+    "    value: Optional[str]  # String representation of value\n",
+    "    type_hint: Optional[str]  # Type annotation if present\n",
+    "    comment: Optional[str]  # Inline comment\n",
+    "    is_exported: bool = False  # Has #| export\n",
     "```\n",
     "\n",
     "```python\n",
     "@dataclass\n",
     "class ModuleInfo:\n",
     "    \"Information about a module (notebook or Python file)\"\n",
+    "    \n",
+    "    path: Path  # Path to module\n",
+    "    name: str  # Module name\n",
+    "    title: Optional[str]  # H1 title from notebook\n",
+    "    description: Optional[str]  # Module description\n",
+    "    functions: List[FunctionInfo] = field(...)  # Functions in module\n",
+    "    classes: List[ClassInfo] = field(...)  # Classes in module\n",
+    "    variables: List[VariableInfo] = field(...)  # Variables in module\n",
+    "    imports: List[str] = field(...)  # Import statements\n",
     "```\n"
    ]
   },
@@ -588,12 +632,20 @@
     "@dataclass\n",
     "class ModuleDependency:\n",
     "    \"Represents a dependency between modules\"\n",
+    "    \n",
+    "    source: str  # Source module name\n",
+    "    target: str  # Target module name\n",
+    "    import_type: str  # Type of import (from/import)\n",
+    "    imported_names: List[str] = field(...)  # Specific names imported\n",
     "```\n",
     "\n",
     "```python\n",
     "@dataclass\n",
     "class DependencyGraph:\n",
     "    \"Dependency graph for a project\"\n",
+    "    \n",
+    "    modules: Dict[str, ModuleInfo] = field(...)  # Module name -> ModuleInfo\n",
+    "    dependencies: List[ModuleDependency] = field(...)  # All dependencies\n",
     "    \n",
     "    def add_module(\n",
     "            self,\n",
