Refactor large functions into smaller ones.

--- a/nbs/01_parsers.ipynb
+++ b/nbs/01_parsers.ipynb
@@ -206,7 +206,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a4fddf9-11ae-43d7-9260-6d5d5d99a06f",
+   "id": "a9286863-7a59-43db-87f4-095502f3a6e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _parse_decorators(node: Union[ast.ClassDef, ast.FunctionDef]  # AST node with decorators\n",
+    "                     ) -> List[str]:                              # List of decorator names\n",
+    "    \"Parse decorators from an AST node\"\n",
+    "    decorators = []\n",
+    "    for decorator in node.decorator_list:\n",
+    "        if isinstance(decorator, ast.Name):\n",
+    "            decorators.append(decorator.id)\n",
+    "        elif isinstance(decorator, ast.Attribute):\n",
+    "            decorators.append(f\"{decorator.attr}\")\n",
+    "    return decorators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35497784-4197-4268-86d2-03d8402ad168",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,12 +243,7 @@
     "    docstring = ast.get_docstring(node)\n",
     "    \n",
     "    # Get decorators\n",
-    "    decorators = []\n",
-    "    for decorator in node.decorator_list:\n",
-    "        if isinstance(decorator, ast.Name):\n",
-    "            decorators.append(decorator.id)\n",
-    "        elif isinstance(decorator, ast.Attribute):\n",
-    "            decorators.append(f\"{decorator.attr}\")\n",
+    "    decorators = _parse_decorators(node)\n",
     "    \n",
     "    return FunctionInfo(\n",
     "        name=node.name,\n",
@@ -243,7 +258,120 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc78c348-764d-4561-bb0c-37775a6367cb",
+   "id": "df17f535-763b-4837-b42e-55df3bac7825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _parse_class_methods(node: ast.ClassDef,           # AST class node\n",
+    "                        source_lines: List[str],        # Source code lines\n",
+    "                        is_exported: bool = False       # Has #| export\n",
+    "                        ) -> List[FunctionInfo]:        # List of method information\n",
+    "    \"Parse methods from a class definition\"\n",
+    "    methods = []\n",
+    "    for item in node.body:\n",
+    "        if isinstance(item, ast.FunctionDef):\n",
+    "            method_info = parse_function(item, source_lines, is_exported)\n",
+    "            methods.append(method_info)\n",
+    "    return methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ade0b6e7-fdd3-44bb-bafb-d8dda97c27be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _parse_dataclass_attributes(node: ast.ClassDef,    # AST class node\n",
+    "                               source_lines: List[str], # Source code lines\n",
+    "                               is_exported: bool = False # Has #| export\n",
+    "                               ) -> List[VariableInfo]: # List of attribute information\n",
+    "    \"Parse dataclass attributes from a class definition\"\n",
+    "    attributes = []\n",
+    "    for item in node.body:\n",
+    "        if isinstance(item, ast.AnnAssign) and isinstance(item.target, ast.Name):\n",
+    "            # This is a type-annotated attribute\n",
+    "            attr_name = item.target.id\n",
+    "            type_hint = ast.unparse(item.annotation) if hasattr(ast, 'unparse') else str(item.annotation)\n",
+    "            \n",
+    "            # Get the default value if present\n",
+    "            default_value = None\n",
+    "            if item.value:\n",
+    "                try:\n",
+    "                    if isinstance(item.value, ast.Constant):\n",
+    "                        default_value = repr(item.value.value)\n",
+    "                    elif isinstance(item.value, ast.Call):\n",
+    "                        # Handle field() calls\n",
+    "                        if isinstance(item.value.func, ast.Name) and item.value.func.id == 'field':\n",
+    "                            default_value = \"field(...)\"\n",
+    "                        else:\n",
+    "                            default_value = ast.unparse(item.value) if hasattr(ast, 'unparse') else \"...\"\n",
+    "                    else:\n",
+    "                        default_value = ast.unparse(item.value) if hasattr(ast, 'unparse') else \"...\"\n",
+    "                except:\n",
+    "                    default_value = \"...\"\n",
+    "            \n",
+    "            # Get inline comment\n",
+    "            comment = None\n",
+    "            if item.lineno <= len(source_lines):\n",
+    "                line = source_lines[item.lineno - 1]\n",
+    "                comment_match = re.search(r'#\\s*(.+)$', line)\n",
+    "                if comment_match:\n",
+    "                    comment = comment_match.group(1).strip()\n",
+    "            \n",
+    "            attr_info = VariableInfo(\n",
+    "                name=attr_name,\n",
+    "                type_hint=type_hint,\n",
+    "                value=default_value,\n",
+    "                comment=comment,\n",
+    "                is_exported=is_exported\n",
+    "            )\n",
+    "            attributes.append(attr_info)\n",
+    "    return attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9869cdca-a4f7-43a0-8582-96abfb50b4b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _generate_class_signature(node: ast.ClassDef,      # AST class node\n",
+    "                             methods: List[FunctionInfo] # List of class methods\n",
+    "                             ) -> str:                  # Class signature\n",
+    "    \"Generate a class signature including __init__ if present\"\n",
+    "    # Start with basic class signature\n",
+    "    class_sig = f\"class {node.name}\"\n",
+    "    \n",
+    "    # Add base classes if present\n",
+    "    if node.bases:\n",
+    "        base_names = []\n",
+    "        for base in node.bases:\n",
+    "            if isinstance(base, ast.Name):\n",
+    "                base_names.append(base.id)\n",
+    "            elif isinstance(base, ast.Attribute):\n",
+    "                base_names.append(f\"{base.attr}\")\n",
+    "        if base_names:\n",
+    "            class_sig += f\"({', '.join(base_names)})\"\n",
+    "    \n",
+    "    class_sig += \":\"\n",
+    "    \n",
+    "    # If there's an __init__ method, include its signature\n",
+    "    init_method = next((m for m in methods if m.name == \"__init__\"), None)\n",
+    "    if init_method:\n",
+    "        class_sig = f\"class {node.name}:\\n    {init_method.signature}\"\n",
+    "    \n",
+    "    return class_sig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dfca0d4-af91-4ef6-91fb-126e6ab7cae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,82 +385,20 @@
     "    docstring = ast.get_docstring(node)\n",
     "    \n",
     "    # Get decorators\n",
-    "    decorators = []\n",
-    "    for decorator in node.decorator_list:\n",
-    "        if isinstance(decorator, ast.Name):\n",
-    "            decorators.append(decorator.id)\n",
-    "        elif isinstance(decorator, ast.Attribute):\n",
-    "            decorators.append(f\"{decorator.attr}\")\n",
+    "    decorators = _parse_decorators(node)\n",
     "    \n",
     "    # Parse methods\n",
-    "    methods = []\n",
-    "    for item in node.body:\n",
-    "        if isinstance(item, ast.FunctionDef):\n",
-    "            method_info = parse_function(item, source_lines, is_exported)\n",
-    "            methods.append(method_info)\n",
+    "    methods = _parse_class_methods(node, source_lines, is_exported)\n",
     "    \n",
     "    # Extract dataclass attributes if this is a dataclass\n",
     "    attributes = []\n",
     "    is_dataclass = 'dataclass' in decorators\n",
     "    \n",
     "    if is_dataclass:\n",
-    "        for item in node.body:\n",
-    "            if isinstance(item, ast.AnnAssign) and isinstance(item.target, ast.Name):\n",
-    "                # This is a type-annotated attribute\n",
-    "                attr_name = item.target.id\n",
-    "                type_hint = ast.unparse(item.annotation) if hasattr(ast, 'unparse') else str(item.annotation)\n",
-    "                \n",
-    "                # Get the default value if present\n",
-    "                default_value = None\n",
-    "                if item.value:\n",
-    "                    try:\n",
-    "                        if isinstance(item.value, ast.Constant):\n",
-    "                            default_value = repr(item.value.value)\n",
-    "                        elif isinstance(item.value, ast.Call):\n",
-    "                            # Handle field() calls\n",
-    "                            if isinstance(item.value.func, ast.Name) and item.value.func.id == 'field':\n",
-    "                                default_value = \"field(...)\"\n",
-    "                            else:\n",
-    "                                default_value = ast.unparse(item.value) if hasattr(ast, 'unparse') else \"...\"\n",
-    "                        else:\n",
-    "                            default_value = ast.unparse(item.value) if hasattr(ast, 'unparse') else \"...\"\n",
-    "                    except:\n",
-    "                        default_value = \"...\"\n",
-    "                \n",
-    "                # Get inline comment\n",
-    "                comment = None\n",
-    "                if item.lineno <= len(source_lines):\n",
-    "                    line = source_lines[item.lineno - 1]\n",
-    "                    comment_match = re.search(r'#\\s*(.+)$', line)\n",
-    "                    if comment_match:\n",
-    "                        comment = comment_match.group(1).strip()\n",
-    "                \n",
-    "                attr_info = VariableInfo(\n",
-    "                    name=attr_name,\n",
-    "                    type_hint=type_hint,\n",
-    "                    value=default_value,\n",
-    "                    comment=comment,\n",
-    "                    is_exported=is_exported\n",
-    "                )\n",
-    "                attributes.append(attr_info)\n",
+    "        attributes = _parse_dataclass_attributes(node, source_lines, is_exported)\n",
     "    \n",
-    "    # Extract class signature (including __init__ if present)\n",
-    "    class_sig = f\"class {node.name}\"\n",
-    "    if node.bases:\n",
-    "        base_names = []\n",
-    "        for base in node.bases:\n",
-    "            if isinstance(base, ast.Name):\n",
-    "                base_names.append(base.id)\n",
-    "            elif isinstance(base, ast.Attribute):\n",
-    "                base_names.append(f\"{base.attr}\")\n",
-    "        if base_names:\n",
-    "            class_sig += f\"({', '.join(base_names)})\"\n",
-    "    class_sig += \":\"\n",
-    "    \n",
-    "    # If there's an __init__ method, include its signature\n",
-    "    init_method = next((m for m in methods if m.name == \"__init__\"), None)\n",
-    "    if init_method:\n",
-    "        class_sig = f\"class {node.name}:\\n    {init_method.signature}\"\n",
+    "    # Generate class signature\n",
+    "    class_sig = _generate_class_signature(node, methods)\n",
     "    \n",
     "    return ClassInfo(\n",
     "        name=node.name,\n",
@@ -634,7 +700,22 @@
       "\n",
       "Classes (2):\n",
       "  - NotebookInfo\n",
-      "  - DirectoryInfo\n"
+      "  - DirectoryInfo\n",
+      "\n",
+      "Testing refactored parse_class function...\n",
+      "Class signatures:\n",
+      "\n",
+      "NotebookInfo:\n",
+      "  Decorators: ['dataclass']\n",
+      "  Methods: ['relative_path']\n",
+      "  Attributes: ['path', 'name', 'title', 'description', 'export_module']\n",
+      "  Signature: class NotebookInfo:...\n",
+      "\n",
+      "DirectoryInfo:\n",
+      "  Decorators: ['dataclass']\n",
+      "  Methods: ['total_notebook_count']\n",
+      "  Attributes: ['path', 'name', 'notebook_count', 'description', 'subdirs', 'notebooks']\n",
+      "  Signature: class DirectoryInfo:...\n"
      ]
     }
    ],
@@ -649,7 +730,16 @@
     "    print(f\"  - {func.name}\")\n",
     "print(f\"\\nClasses ({len(core_info.classes)}):\")\n",
     "for cls in core_info.classes[:3]:  # Show first 3\n",
-    "    print(f\"  - {cls.name}\")"
+    "    print(f\"  - {cls.name}\")\n",
+    "    \n",
+    "print(f\"\\nTesting refactored parse_class function...\")\n",
+    "print(\"Class signatures:\")\n",
+    "for cls in core_info.classes:\n",
+    "    print(f\"\\n{cls.name}:\")\n",
+    "    print(f\"  Decorators: {cls.decorators}\")\n",
+    "    print(f\"  Methods: {[m.name for m in cls.methods]}\")\n",
+    "    print(f\"  Attributes: {[a.name for a in cls.attributes]}\")\n",
+    "    print(f\"  Signature: {cls.signature[:100]}...\")  # First 100 chars"
    ]
   },
   {
