--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def format_function_doc(func: FunctionInfo,             # Function informationFor the `add_cli_reference_section` function, remember that while we are using this project's functionality on itself, it is meant to be used on other nbdev projects as well. Therefore, we should first check the project's `settings.ini` file to see if the `console_scripts` value has anything, we can do that with `cfg = get_config(); cfg.console_scripts` (e.g., 'nbdev-overview=cjm_nbdev_overview.cli:main'). I believe we should then be able to use that to get the CLI reference info. Rather than hardcoding the CLI reference, we should programmatically generate it to account for changes.  \n",
+    "def format_function_doc(func: FunctionInfo,             # Function information\n",
     "                       indent: str = \"\"                 # Indentation prefix\n",
     "                       ) -> str:                        # Formatted documentation\n",
     "    \"Format a function with its signature for documentation\"\n",
@@ -218,15 +218,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54d69346-8d4b-4c60-a91d-20dc3b3b2c57",
+   "id": "be5bpnm7ja",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def generate_module_overview(module: ModuleInfo,        # Module information\n",
-    "                           show_all: bool = False       # Show all items including private\n",
-    "                           ) -> str:                    # Module overview markdown\n",
-    "    \"Generate a markdown overview for a module\"\n",
+    "def _generate_module_header(module: ModuleInfo          # Module information\n",
+    "                          ) -> List[str]:               # Header lines\n",
+    "    \"Generate module title and description lines\"\n",
     "    lines = []\n",
     "    \n",
     "    # Add module title\n",
@@ -239,10 +238,23 @@
     "    if module.description:\n",
     "        lines.append(f\"> {module.description}\")\n",
     "    \n",
-    "    # Add import statements section\n",
+    "    return lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "r91cpmqo1i",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _generate_import_statement(module: ModuleInfo       # Module information\n",
+    "                             ) -> List[str]:            # Import statement lines\n",
+    "    \"Generate import statement lines for a module\"\n",
+    "    lines = []\n",
     "    lines.append(\"\\n#### Import\\n\")\n",
     "    \n",
-    "    # Generate import statement based on the corresponding Python file\n",
     "    try:\n",
     "        from nbdev.config import get_config\n",
     "        cfg = get_config()\n",
@@ -312,7 +324,21 @@
     "        lines.append(f\"# Import statements not available\")\n",
     "        lines.append(\"```\")\n",
     "    \n",
-    "    # Filter items based on show_all and is_exported\n",
+    "    return lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "u3tf6nbnkpf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _filter_module_items(module: ModuleInfo,            # Module information\n",
+    "                        show_all: bool = False          # Show all items including private\n",
+    "                        ) -> tuple:                     # (functions, classes, variables)\n",
+    "    \"Filter module items based on show_all and is_exported flags\"\n",
     "    if show_all:\n",
     "        functions = module.functions\n",
     "        classes = module.classes  \n",
@@ -322,27 +348,79 @@
     "        classes = [c for c in module.classes if c.is_exported]\n",
     "        variables = [v for v in module.variables if v.is_exported]\n",
     "    \n",
-    "    # Add functions section\n",
+    "    return functions, classes, variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68geyuru13y",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _generate_functions_section(functions: List[FunctionInfo]   # List of functions\n",
+    "                              ) -> List[str]:                   # Section lines\n",
+    "    \"Generate the functions section of module documentation\"\n",
+    "    lines = []\n",
     "    if functions:\n",
     "        lines.append(\"\\n#### Functions\\n\")\n",
     "        for func in functions:\n",
     "            lines.append(format_function_doc(func))\n",
     "            lines.append(\"\")\n",
-    "    \n",
-    "    # Add classes section\n",
+    "    return lines\n",
+    "\n",
+    "def _generate_classes_section(classes: List[ClassInfo]          # List of classes\n",
+    "                            ) -> List[str]:                     # Section lines\n",
+    "    \"Generate the classes section of module documentation\"\n",
+    "    lines = []\n",
     "    if classes:\n",
     "        lines.append(\"#### Classes\\n\")\n",
     "        for cls in classes:\n",
     "            lines.append(format_class_doc(cls))\n",
     "            lines.append(\"\")\n",
-    "    \n",
-    "    # Add variables section\n",
+    "    return lines\n",
+    "\n",
+    "def _generate_variables_section(variables: List[VariableInfo]   # List of variables\n",
+    "                              ) -> List[str]:                   # Section lines\n",
+    "    \"Generate the variables section of module documentation\"\n",
+    "    lines = []\n",
     "    if variables:\n",
     "        lines.append(\"#### Variables\\n\")\n",
     "        lines.append(\"```python\")\n",
     "        for var in variables:\n",
     "            lines.append(format_variable_doc(var))\n",
     "        lines.append(\"```\")\n",
+    "    return lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54d69346-8d4b-4c60-a91d-20dc3b3b2c57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def generate_module_overview(module: ModuleInfo,        # Module information\n",
+    "                           show_all: bool = False       # Show all items including private\n",
+    "                           ) -> str:                    # Module overview markdown\n",
+    "    \"Generate a markdown overview for a module\"\n",
+    "    lines = []\n",
+    "    \n",
+    "    # Generate header (title and description)\n",
+    "    lines.extend(_generate_module_header(module))\n",
+    "    \n",
+    "    # Generate import statement\n",
+    "    lines.extend(_generate_import_statement(module))\n",
+    "    \n",
+    "    # Filter items based on show_all and is_exported\n",
+    "    functions, classes, variables = _filter_module_items(module, show_all)\n",
+    "    \n",
+    "    # Generate sections for functions, classes, and variables\n",
+    "    lines.extend(_generate_functions_section(functions))\n",
+    "    lines.extend(_generate_classes_section(classes))\n",
+    "    lines.extend(_generate_variables_section(variables))\n",
     "    \n",
     "    return '\\n'.join(lines)"
    ]
@@ -1063,8 +1141,8 @@
       "```python\n",
       "from cjm-nbdev-overview.parsers import (\n",
       "    FunctionInfo,\n",
-      "    ClassInfo,\n",
       "    VariableInfo,\n",
+      "    ClassInfo,\n",
       "    ModuleInfo,\n",
       "    extract_docments_signature,\n",
       "    parse_function,\n",
@@ -1086,7 +1164,7 @@
       "```\n",
       "\n",
       "```python\n",
-      "def parse_funct...\n"
+      "def _parse_deco...\n"
      ]
     }
    ],
