--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -228,8 +228,8 @@
     "```python\n",
     "from cjm-nbdev-overview.parsers import (\n",
     "    FunctionInfo,\n",
-    "    ClassInfo,\n",
     "    VariableInfo,\n",
+    "    ClassInfo,\n",
     "    ModuleInfo,\n",
     "    extract_docments_signature,\n",
     "    parse_function,\n",
@@ -251,11 +251,40 @@
     "```\n",
     "\n",
     "```python\n",
+    "def _parse_decorators(node: Union[ast.ClassDef, ast.FunctionDef]  # AST node with decorators\n",
+    "                     ) -> List[str]:                              # List of decorator names\n",
+    "    \"Parse decorators from an AST node\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
     "def parse_function(node: ast.FunctionDef,               # AST function node\n",
     "                  source_lines: List[str],              # Source code lines\n",
     "                  is_exported: bool = False             # Has #| export\n",
     "                  ) -> FunctionInfo:                    # Function information\n",
     "    \"Parse a function definition from AST\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _parse_class_methods(node: ast.ClassDef,           # AST class node\n",
+    "                        source_lines: List[str],        # Source code lines\n",
+    "                        is_exported: bool = False       # Has #| export\n",
+    "                        ) -> List[FunctionInfo]:        # List of method information\n",
+    "    \"Parse methods from a class definition\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _parse_dataclass_attributes(node: ast.ClassDef,    # AST class node\n",
+    "                               source_lines: List[str], # Source code lines\n",
+    "                               is_exported: bool = False # Has #| export\n",
+    "                               ) -> List[VariableInfo]: # List of attribute information\n",
+    "    \"Parse dataclass attributes from a class definition\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _generate_class_signature(node: ast.ClassDef,      # AST class node\n",
+    "                             methods: List[FunctionInfo] # List of class methods\n",
+    "                             ) -> str:                  # Class signature\n",
+    "    \"Generate a class signature including __init__ if present\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -309,6 +338,18 @@
     "\n",
     "```python\n",
     "@dataclass\n",
+    "class VariableInfo:\n",
+    "    \"Information about a module-level variable\"\n",
+    "    \n",
+    "    name: str  # Variable name\n",
+    "    value: Optional[str]  # String representation of value\n",
+    "    type_hint: Optional[str]  # Type annotation if present\n",
+    "    comment: Optional[str]  # Inline comment\n",
+    "    is_exported: bool = False  # Has #| export\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "@dataclass\n",
     "class ClassInfo:\n",
     "    \"Information about a class\"\n",
     "    \n",
@@ -320,18 +361,6 @@
     "    attributes: List[VariableInfo] = field(...)  # Class attributes (for dataclasses)\n",
     "    is_exported: bool = False  # Has #| export\n",
     "    source_line: Optional[int]  # Line number in source\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "@dataclass\n",
-    "class VariableInfo:\n",
-    "    \"Information about a module-level variable\"\n",
-    "    \n",
-    "    name: str  # Variable name\n",
-    "    value: Optional[str]  # String representation of value\n",
-    "    type_hint: Optional[str]  # Type annotation if present\n",
-    "    comment: Optional[str]  # Inline comment\n",
-    "    is_exported: bool = False  # Has #| export\n",
     "```\n",
     "\n",
     "```python\n",
@@ -471,7 +500,7 @@
     "#### Functions\n",
     "\n",
     "```python\n",
-    "def format_function_doc(func: FunctionInfo,             # Function informationFor the `add_cli_reference_section` function, remember that while we are using this project's functionality on itself, it is meant to be used on other nbdev projects as well. Therefore, we should first check the project's `settings.ini` file to see if the `console_scripts` value has anything, we can do that with `cfg = get_config(); cfg.console_scripts` (e.g., 'nbdev-overview=cjm_nbdev_overview.cli:main'). I believe we should then be able to use that to get the CLI reference info. Rather than hardcoding the CLI reference, we should programmatically generate it to account for changes.  \n",
+    "def format_function_doc(func: FunctionInfo,             # Function information\n",
     "                       indent: str = \"\"                 # Indentation prefix\n",
     "                       ) -> str:                        # Formatted documentation\n",
     "    \"Format a function with its signature for documentation\"\n",
@@ -487,6 +516,43 @@
     "def format_variable_doc(var: VariableInfo               # Variable information\n",
     "                       ) -> str:                        # Formatted documentation\n",
     "    \"Format a variable for documentation\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _generate_module_header(module: ModuleInfo          # Module information\n",
+    "                          ) -> List[str]:               # Header lines\n",
+    "    \"Generate module title and description lines\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _generate_import_statement(module: ModuleInfo       # Module information\n",
+    "                             ) -> List[str]:            # Import statement lines\n",
+    "    \"Generate import statement lines for a module\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _filter_module_items(module: ModuleInfo,            # Module information\n",
+    "                        show_all: bool = False          # Show all items including private\n",
+    "                        ) -> tuple:                     # (functions, classes, variables)\n",
+    "    \"Filter module items based on show_all and is_exported flags\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _generate_functions_section(functions: List[FunctionInfo]   # List of functions\n",
+    "                              ) -> List[str]:                   # Section lines\n",
+    "    \"Generate the functions section of module documentation\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _generate_classes_section(classes: List[ClassInfo]          # List of classes\n",
+    "                            ) -> List[str]:                     # Section lines\n",
+    "    \"Generate the classes section of module documentation\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _generate_variables_section(variables: List[VariableInfo]   # List of variables\n",
+    "                              ) -> List[str]:                   # Section lines\n",
+    "    \"Generate the variables section of module documentation\"\n",
     "```\n",
     "\n",
     "```python\n",
